--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Lupin, Arsène (Fictitious character) -- Fiction'
 - !lcsh 'Adventure and adventurers -- Fiction'
 - !lcsh 'Burglars -- Fiction'
+- GITenberg
 title: The Confessions of Arsène Lupin
 url: http://www.gutenberg.org/ebooks/28093
